--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/kingrome/Desktop/finance/libraray/httpcore-4.4.10.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kingrome/Desktop/finance/libraray/jsoup-1.11.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kingrome/Desktop/finance/libraray/httpclient-4.5.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/kingrome/Desktop/finance/libraray/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.4.10.jar"/>
+	<classpathentry kind="lib" path="lib/jsoup-1.11.3.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
