--- a/bin/resource/message.properties
+++ b/bin/resource/message.properties
@@ -1,3 +1,13 @@
+mapper.path=src/resource/mapper/
+
+database.type=mysql
+
+#mysql
+mysql.url=jdbc:mysql://127.0.0.1:3306/finance
+mysql.id=root
+mysql.pw=wjdwls386
+
+
 NHN.startTxt=\ub124\uc774\ubc84 \uae08\uc735 \uc77c\ubcc4\uc2dc\uc138 \ub0a0\uc9dc \uc885\uac00 \uc804\uc77c\ube44 \uc2dc\uac00 \uace0\uac00 \uc800\uac00 \uac70\ub798\ub7c9 
 NHN.endTxt=\ud398\uc774\uc9c0 \ub124\ube44\uac8c\uc774\uc158
 
@@ -8,10 +18,3 @@ NHN.upDownSize=\uc804\uc77c\ube44
 NHN.maxPrice=\uace0\uac00
 NHN.minPrice=\uc800\uac00
 NHN.transaction=\uac70\ub798\ub7c9
-
-database.type=mysql
-
-#mysql
-mysql.url=jdbc:mysql://127.0.0.1:3306/finance
-mysql.id=root
-mysql.pw=wjdwls386
